# mcp-email-client

./: pyproject.toml  server.py
